# mozaiks

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  KERNEL_INTEGRATION_ROADMAP.md  LICENSE  PLATFORM_ARCHITECTURE.md  README.md  SETUP_INSTRUCTIONS.md  app.json  mkdocs.yml  package-lock.json  pyproject.toml  requirements-docs.txt  shared_app.py
.claude/: settings.local.json
.github/workflows/: docs.yml
app/: App.jsx  README.md  app.json  package.json  tailwind.config.js  vite.config.js
app/brand/public/: auth.json  brand.json  navigation.json  ui.json
chat-ui/: package-lock.json  package.json
chat-ui/src/: index.js
chat-ui/src/@chat-workflows/: index.js
chat-ui/src/adapters/: api.js  keycloakAuth.js  mockApiAdapter.js  mockAuthAdapter.js
chat-ui/src/app/: MozaiksApp.jsx
chat-ui/src/components/: RouteRenderer.jsx
chat-ui/src/config/: ConfigValidationOverlay.jsx  index.js  validateConfig.js  workflowConfig.js
chat-ui/src/core/: WorkflowUIRouter.js  dynamicUIHandler.js  eventDispatcher.js
chat-ui/src/pages/: ChatPage.js  DashboardPage.js
chat-ui/src/primitives/: index.js
chat-ui/src/providers/: BrandingProvider.jsx  NavigationProvider.jsx  index.js
chat-ui/src/registry/: coreComponents.js
chat-ui/src/styles/: themeProvider.js  useTheme.js
chat-ui/src/theme/: index.js
chat-ui/src/utils/: resolveWorkflow.js
chat-ui/src/workflows/: index.js
docs/: AGENT_BOOTSTRAP_PROMPT.md  CNAME  getting-started.md  index.md  setup-prompt.md
docs/architecture/: AG2_TOUCHPOINTS_AND_EXTENSIONS.md  MESSAGE TO AG2.md  MID_FLIGHT_JOURNEYS.md  keycloak-auth.md  orchestration-and-decomposition.md
docs/architecture/events/: DECLARATIVE_RUNTIME_SYSTEM.md  EVENT_SYSTEM_INVENTORY.md  README.md
docs/architecture/frontend/: conversation-modes.md  event-driven-state.md  index.md  layout-modes.md  persistent-widget.md  ui-surface-model.md
docs/architecture/source-of-truth/: APP_CREATION_GUIDE.md  CANONICAL_APP_STRUCTURE.md  EVENT_SYSTEM_ARCHITECTURE.md  EVENT_TAXONOMY.md  GRAPH_INJECTION_CONTRACT.md  LEARNING_LOOP_ARCHITECTURE.md  PROCESS_AND_EVENT_MAP.md  README.md  UI_SURFACE_AND_LAYOUT_ARCHITECTURE.md  WORKFLOW_ARCHITECTURE.md
docs/guides/: CUSTOM_FRONTEND_CREATION.md  adding-a-workflow.md
docs/guides/adding-workflows/: 01-overview.md  02-backend-basics.md  03-tools.md  04-ui-components.md  05-testing.md
docs/guides/custom-brand-integration/: 01-overview.md  02-brand-json.md  03-ui-json.md  04-assets.md  05-wiring.md  06-auth-json.md
docs/guides/customizing-frontend/: 01-overview.md  02-brand-json.md  03-ui-json.md  04-assets.md  05-wiring.md  06-auth-json.md
docs/guides/databases/: 01-overview.md  02-mongodb.md  03-keycloak.md  04-production.md
docs/guides/telemetry/: 01-overview.md  02-agent-tracing.md  03-cost-tracking.md  04-budget-management.md
docs/instruction-prompts/: README.md
docs/instruction-prompts/adding-workflows/: 01-overview.md  02-backend-basics.md  03-tools.md  04-ui-components.md  05-testing.md
docs/instruction-prompts/custom-brand-integration/: 01-overview.md  02-brand-json.md  03-ui-json.md  04-assets.md  05-wiring.md  06-auth-json.md  colors-and-theme.md
docs/instruction-prompts/databases/: setup.md
docs/instruction-prompts/getting-started/: environment-variables.md  full-setup-from-clone.md
docs/instruction-prompts/telemetry/: 01-overview.md  02-agent-tracing.md  03-cost-tracking.md  04-budget-management.md
docs/instruction-prompts/workflows/: create-new-workflow.md
docs/stylesheets/: extra.css
infra/compose/: docker-compose.prod.yml  docker-compose.yml
infra/docker/: Dockerfile
infra/keycloak/: realm-export.json
logs/: __init__.py
logs/workflow_converter/: converter_input_TestDatabaseSchema_2759374c29_20260225_164308.json  converter_input_TestDatabaseSchema_cca99e3279_20260225_164846.json  converter_input_TestDatabaseSchema_e016f6ce34_20260225_164512.json
mozaiksai/core/: __init__.py  factory.py
mozaiksai/core/auth/: __init__.py  auth_config_loader.py  config.py  dependencies.py  discovery.py  jwt_validator.py
mozaiksai/core/contracts/: __init__.py  artifacts.py  events.py  runner.py  sandbox.py  taxonomy.py
mozaiksai/core/events/: dispatcher.py  unified_event_dispatcher.py
mozaiksai/core/observability/: __init__.py  ag2_runtime_logger.py  cost_tracker.py  otel_tracing.py
mozaiksai/core/ports/: __init__.py  ag2_adapter.py  ai_runner.py  context.py  orchestration.py  registry.py  runtime.py  sandbox.py  secrets.py  tool_execution.py
mozaiksai/core/runtime/: extensions.py  platform_hooks.py
mozaiksai/core/transport/: simple_transport.py
mozaiksai/core/workflow/: orchestration_patterns.py  workflow_manager.py
mozaiksai/orchestration/: __init__.py  decomposition.py  events.py  groupchat_pool.py  merge.py  universal.py
mozaiksai/platform/: __init__.py  extensions.py  routers.py
scripts/: check_event_envelope_protocol_guard.py
site/: 404.html  index.html
site/css/: docs.css
site/guides/custom-frontend/: assets.html  brand-json.html  index.html  ui-json.html  wiring.html
src/mozaiks/: __init__.py
src/mozaiks/contracts/: __init__.py  events.py  replay.py  runner.py  secrets.py  taxonomy.py  tools.py
src/mozaiks/core/: main.py
src/mozaiks/orchestration/: __init__.py  runner.py
templates/: README.md  app.json
templates/backend/: .gitignore  README.md  main.py  requirements.txt
templates/frontend/: .env.example  App.jsx  index.html  package-lock.json  vite.config.js
templates/frontend/brand/: README.md
tests/: __init__.py  test_convergence_units.py  test_declarative_runtime.py  test_event_schemas.py  test_integration_mfj.py  test_merge_strategies.py  test_mfj_observability.py  test_mfj_persistence.py  test_pack_schema.py  test_public_api_contract.py  test_ui_event_enrichment.py  test_universal_orchestrator.py  test_workflow_pack_coordinator.py
workflows/HelloWorld/: __init__.py  agents.yaml  context_variables.yaml  handoffs.yaml  hooks.yaml  orchestrator.yaml  structured_outputs.yaml  tools.yaml  ui_config.yaml
(+151 files in other folders)
