[project]
name = "mozaiks-runtime"
version = "1.0.0"
description = "Mozaiks AG2 Runtime — production-ready multi-tenant workflow execution backend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "BlocUnited LLC", email = "mike@blocunited.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["mozaiks", "ag2", "autogen", "ai", "agents", "workflows", "multi-tenant", "runtime"]

dependencies = [
    "ag2[openai,lmm]",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=11.0",
    "motor>=3.3.0",
    "pymongo>=4.5.0",
    "dnspython>=2.4.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "PyJWT[crypto]>=2.8.0",
    "jinja2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "watchdog",
]
tree-sitter = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-css",
]
e2b = [
    "e2b-code-interpreter>=0.0.10",
]

[project.urls]
Homepage = "https://github.com/BlocUnited-LLC/mozaiks"
Repository = "https://github.com/BlocUnited-LLC/mozaiks"
Documentation = "https://github.com/BlocUnited-LLC/mozaiks#readme"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
