[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mozaiks"
version = "1.0.0"
description = "Mozaiks AG2 Runtime — production-ready multi-tenant workflow execution backend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "BlocUnited LLC", email = "mike@blocunited.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["mozaiks", "ag2", "autogen", "ai", "agents", "workflows", "multi-tenant", "runtime"]

dependencies = [
    "ag2[openai,lmm]",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=11.0",
    "motor>=3.3.0",
    "pymongo>=4.5.0",
    "dnspython>=2.4.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "PyJWT[crypto]>=2.8.0",
    "jinja2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "watchdog",
]
tree-sitter = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-css",
]
e2b = [
    "e2b-code-interpreter>=0.0.10",
]

[project.urls]
Homepage = "https://github.com/BlocUnited-LLC/mozaiks"
Repository = "https://github.com/BlocUnited-LLC/mozaiks"
Documentation = "https://github.com/BlocUnited-LLC/mozaiks#readme"

[tool.ruff]
line-length = 100
target-version = "py311"

# ---------------------------------------------------------------------------
# Package mapping
# ---------------------------------------------------------------------------
# On disk the code lives under mozaiksai/.  The package-dir mapping lets
# external consumers (mozaiks-platform, self-hosted apps) import via the
# public "mozaiks" namespace:
#
#   from mozaiks.core import create_app
#
# The "mozaiksai" packages are ALSO listed so that the existing 154+ internal
# imports (from mozaiksai.core.…) keep working during the gradual migration
# to the public "mozaiks.*" namespace.
# ---------------------------------------------------------------------------
[tool.setuptools.package-dir]
"mozaiks" = "mozaiksai"

[tool.setuptools]
packages = [
    # ── public API namespace (for external consumers) ──
    "mozaiks",
    "mozaiks.core",
    "mozaiks.core.artifacts",
    "mozaiks.core.auth",
    "mozaiks.core.capabilities",
    "mozaiks.core.data",
    "mozaiks.core.data.persistence",
    "mozaiks.core.data.themes",
    "mozaiks.core.events",
    "mozaiks.core.multitenant",
    "mozaiks.core.observability",
    "mozaiks.core.runtime",
    "mozaiks.core.transport",
    "mozaiks.core.workflow",
    "mozaiks.core.workflow.agents",
    "mozaiks.core.workflow.context",
    "mozaiks.core.workflow.execution",
    "mozaiks.core.workflow.messages",
    "mozaiks.core.workflow.outputs",
    "mozaiks.core.workflow.pack",
    "mozaiks.core.workflow.validation",
    "mozaiks.orchestration",
    "mozaiks.platform",
    # ── internal namespace (backward compat — migrate over time) ──
    "mozaiksai",
    "mozaiksai.core",
    "mozaiksai.core.artifacts",
    "mozaiksai.core.auth",
    "mozaiksai.core.capabilities",
    "mozaiksai.core.data",
    "mozaiksai.core.data.persistence",
    "mozaiksai.core.data.themes",
    "mozaiksai.core.events",
    "mozaiksai.core.multitenant",
    "mozaiksai.core.observability",
    "mozaiksai.core.runtime",
    "mozaiksai.core.transport",
    "mozaiksai.core.workflow",
    "mozaiksai.core.workflow.agents",
    "mozaiksai.core.workflow.context",
    "mozaiksai.core.workflow.execution",
    "mozaiksai.core.workflow.messages",
    "mozaiksai.core.workflow.outputs",
    "mozaiksai.core.workflow.pack",
    "mozaiksai.core.workflow.validation",
    "mozaiksai.orchestration",
    "mozaiksai.platform",
    # ── support packages (repo-root modules used by mozaiksai) ──
    "logs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
